--- a/my-extension/manifest.json
+++ b/my-extension/manifest.json
@@ -1,9 +1,9 @@
 {
     "manifest_version": 3,
     "name": "Phishing Detector",
-    "version": "1.0.0",
+    "version": "1.0",
     "description": "Detects phishing attempts by analyzing website URLs and page content.",
-    "permissions": ["tabs", "scripting"],
+    "permissions": ["tabs", "activeTab", "scripting"],
     "background": {
       "service_worker": "background.js"
     },
