tried to use our model in the background

--- a/my-extension/manifest.json
+++ b/my-extension/manifest.json
@@ -5,7 +5,8 @@
     "description": "Detects phishing attempts by analyzing website URLs and page content.",
     "permissions": ["tabs", "activeTab", "scripting"],
     "background": {
-      "service_worker": "background.js"
+      "service_worker": "background.js",
+      "type": "module"
     },
     "content_scripts": [
       {
